[package]
name = "interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib.git", tag = "v0.5.9-alpha" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
