[package]
name = "lccp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib.git", tag = "v0.5.9-alpha" }
multipart = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "efcc759" }
common_types = { path = "../../common_types" }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
