[package]
name = "openai"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", tag = "v0.8.1" }
multipart = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.24.0"
llm_interface = { git = "https://github.com/kinode-dao/llm/", branch = "interface" }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
